--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+appdirs==1.4.4
 astroid==2.4.2
 autopep8==1.5.7
 bcrypt==4.0.0
@@ -7,6 +8,7 @@ billiard==3.6.4.0
 bs4==0.0.1
 celery==5.2.7
 certifi==2021.5.30
+chardet==5.1.0
 charset-normalizer==2.0.4
 click==8.1.3
 click-didyoumean==0.3.0
@@ -23,6 +25,7 @@ fonttools==4.37.4
 gunicorn==20.1.0
 httplib2==0.19.0
 idna==3.2
+importlib-metadata==6.0.0
 isort==5.7.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -32,9 +35,9 @@ lazy-object-proxy==1.4.3
 libretranslatepy==2.1.1
 lxml==4.6.3
 MarkupSafe==2.0.1
-matplotlib>=3.4.3
+matplotlib==3.6.0
 mccabe==0.6.1
-numpy==1.19.5
+numpy==1.23.0
 packaging==21.3
 pandas==1.3.1
 password-validator==1.0
@@ -42,9 +45,11 @@ Pillow==9.2.0
 prompt-toolkit==3.0.36
 pwinput==1.0.2
 pycodestyle==2.7.0
+pyee==8.2.2
 pylint==2.6.2
 pymongo==3.11.2
 pyparsing==2.4.7
+pyppeteer==1.0.2
 python-dateutil==2.8.2
 python-usernames==0.3.1
 pytube==10.4.1
@@ -53,19 +58,24 @@ pytz==2022.7.1
 PyYAML==5.4.1
 requests==2.26.0
 response==0.5.0
-scipy==1.6.3
+scipy==1.9.1
 selenium==3.141.0
 six==1.15.0
 soupsieve==2.2.1
 tabulate==0.8.9
 textmagic==2.0.3
 toml==0.10.2
+tqdm==4.64.1
 translate==3.6.1
 typing-extensions==3.7.4.3
+unicode==2.9
+Unidecode==1.3.6
 urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.6
 webdriver-manager==3.4.2
+websockets==10.4
 Werkzeug==2.0.1
 wordcloud==1.8.2.2
 wrapt==1.12.1
+zipp==3.14.0
