--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+anyio==3.6.2
 appdirs==1.4.4
 astroid==2.4.2
 autopep8==1.5.7
@@ -18,14 +19,20 @@ colorama==0.4.4
 configparser==5.0.2
 contourpy==1.0.5
 crayons==0.4.0
+cssselect==1.2.0
 cycler==0.11.0
+fake-useragent==1.1.3
 Flask==2.0.1
 Flask-Cors==3.0.10
 fonttools==4.37.4
 gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.16.3
 httplib2==0.19.0
+httpx==0.23.3
 idna==3.2
 importlib-metadata==6.0.0
+importlib-resources==5.12.0
 isort==5.7.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -35,11 +42,12 @@ lazy-object-proxy==1.4.3
 libretranslatepy==2.1.1
 lxml==4.6.3
 MarkupSafe==2.0.1
-matplotlib==3.3.4
+matplotlib==3.6.0
 mccabe==0.6.1
-numpy==1.19.3
+numpy==1.23.0
 packaging==21.3
 pandas==1.3.1
+parse==1.19.0
 password-validator==1.0
 Pillow==9.2.0
 prompt-toolkit==3.0.36
@@ -50,6 +58,7 @@ pylint==2.6.2
 pymongo==3.11.2
 pyparsing==2.4.7
 pyppeteer==1.0.2
+pyquery==2.0.0
 python-dateutil==2.8.2
 python-usernames==0.3.1
 pytube==10.4.1
@@ -57,10 +66,13 @@ pytube3==9.6.4
 pytz==2022.7.1
 PyYAML==5.4.1
 requests==2.26.0
+requests-html==0.10.0
 response==0.5.0
-scipy==1.7.3
+rfc3986==1.5.0
+scipy==1.9.1
 selenium==3.141.0
 six==1.15.0
+sniffio==1.3.0
 soupsieve==2.2.1
 tabulate==0.8.9
 textmagic==2.0.3
@@ -72,6 +84,7 @@ unicode==2.9
 Unidecode==1.3.6
 urllib3==1.26.6
 vine==5.0.0
+w3lib==2.1.1
 wcwidth==0.2.6
 webdriver-manager==3.4.2
 websockets==10.4
